src/objects/location__c.object
<CustomObject>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>idx__c</fullName>
        <displayFormat>ID-{0000}</displayFormat>
        <label>idx</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>new__c</fullName>
        <formula>HYPERLINK(&apos;https://na9.salesforce.com/a02/e?retURL=%2Fa02E0000002EQij&apos;,&apos;Create a New &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>new</label>
        <type>Text</type>
    </fields>
    <label>location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>location</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>